--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="../images/favicon.png" type="image/png" sizes="16x16">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Curriculum Vitae </title>
 </head>
 <body>
     <div id="ContenedorCabecera">
         <div id="ContenedorImagen">
-            <img src="images/fotocv1.jpg" alt="MiFoto">
+            <img src="../images/fotocv1.jpg" alt="MiFoto">
         </div>
 
         <div id="ContenedorNombre">
@@ -20,11 +21,11 @@
     </div>
 
     <div id="CarrouselOpciones">
-        <div id="InformacionPersonal" onclick="mostrar('contacto')"><img src="images/telefono.png" alt="Telefono"></div>
-        <div id="Idiomas" onclick="mostrar('idiomas')"><img src="images/idiomas.png" alt="Idiomas"></div>
-        <div id="Academico" onclick="mostrar('academico')"><img src="images/Academia.png" alt="Academico"></div>
-        <div id="CursosComplementarios" onclick="mostrar('cursos')"><img src="images/cursos.png" alt="Cursos"></div>
-        <div id="ExperienciaLaboral" onclick="mostrar('experiencia')"><img src="images/empleo.png" alt="Empleos"></div>
+        <div id="InformacionPersonal" onclick="mostrar('contacto')"><img src="../images/telefono.png" alt="Telefono"></div>
+        <div id="Idiomas" onclick="mostrar('idiomas')"><img src="../images/idiomas.png" alt="Idiomas"></div>
+        <div id="Academico" onclick="mostrar('academico')"><img src="../images/Academia.png" alt="Academico"></div>
+        <div id="CursosComplementarios" onclick="mostrar('cursos')"><img src="../images/cursos.png" alt="Cursos"></div>
+        <div id="ExperienciaLaboral" onclick="mostrar('experiencia')"><img src="../images/empleo.png" alt="Empleos"></div>
     </div>
 
     <div id="TextoOculto">
@@ -36,10 +37,10 @@
         </p>
     </div>
 
-    <div id="footer">
+    <footer id="footer">
         <p>&copy Lucas Ponti</p>
-    </div>
+    </footer>
 
-    <script src="funciones.js"></script>
+    <script src="../js/funciones.js"></script>
 </body>
 </html>
