--- a/index.html
+++ b/index.html
@@ -4,41 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="icon" href="../images/favicon.png" type="image/png" sizes="16x16">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Curriculum Vitae </title>
 </head>
 <body>
-    <div id="ContenedorCabecera">
+    <header id="ContenedorCabecera">
         <div id="ContenedorImagen">
             <img src="../images/fotocv1.jpg" alt="MiFoto">
+            <a href="./html/datos-personales.html">Mis Datos</a>
         </div>
 
         <div id="ContenedorNombre">
             <h1>Lucas Ivan Ponti</h1>
             <h2>Programador Web</h2>
         </div>
-    </div>
+    </header>
 
-    <div id="CarrouselOpciones">
+    <nav id="CarrouselOpciones">
         <div id="InformacionPersonal" onclick="mostrar('contacto')"><img src="../images/telefono.png" alt="Telefono"></div>
         <div id="Idiomas" onclick="mostrar('idiomas')"><img src="../images/idiomas.png" alt="Idiomas"></div>
         <div id="Academico" onclick="mostrar('academico')"><img src="../images/Academia.png" alt="Academico"></div>
         <div id="CursosComplementarios" onclick="mostrar('cursos')"><img src="../images/cursos.png" alt="Cursos"></div>
         <div id="ExperienciaLaboral" onclick="mostrar('experiencia')"><img src="../images/empleo.png" alt="Empleos"></div>
+    </nav>
+
+    <section id="TextoOculto">
+            
+    </section>
+
+    <div id="MostrarOcultar">
+        <button id="boton" style="display: block" type="button" onclick= "ocultar('TextoOculto')">Ocultar</button>
+        <button id="boton" style="display: block" type="button" onclick= "expandir('TextoOculto')">Mostrar</button>
     </div>
 
-    <div id="TextoOculto">
-
-    </div>
-
-    <div id="NotaPresentacion">
+    <section id="NotaPresentacion">
         <p>Soy una persona proactiva y curiosa, estoy en constante capacitación. Aprendo rápido, y me gusta trabajar de manera coordinada para llegar a los objetivos. Busco mi oportunidad para desempeñarme dentro del desarrollo web. Cuento con disponibilidad para aprender nuevas tecnologías.
         </p>
-    </div>
+    </section>
 
     <footer id="footer">
-        <p>&copy Lucas Ponti</p>
+        <p>&copy Lucas Ponti</p> <img id="scrolltotop" src="./images/flecha.png" alt="scroll to top" onclick="scrolltotop()">
     </footer>
 
     <script src="../js/funciones.js"></script>
